@@ -1,0 +1,65 @@
+/*
+ * $Id$
+ *
+ * Copyright 2004 Wanadoo Nederland B.V.
+ * See the COPYRIGHT file for redistribution and use restrictions.
+ */
+package org.xins.common.service;
+
+import org.xins.common.Log;
+
+/**
+ * Abstraction of a call configuration. Objects of this type specify certain
+ * aspects of <em>how</em> a call is executed. For example, for an HTTP
+ * service caller, a <code>CallConfig</code> object could specify what HTTP
+ * method (GET, POST, etc.) to use.
+ *
+ * @version $Revision$ $Date$
+ * @author Ernst de Haan (<a href="mailto:ernst.dehaan@nl.wanadoo.com">ernst.dehaan@nl.wanadoo.com</a>)
+ *
+ * @since XINS 1.1.0
+ */
+public abstract class CallConfig extends Object {
+
+   //-------------------------------------------------------------------------
+   // Class fields
+   //-------------------------------------------------------------------------
+
+   /**
+    * Fully-qualified name of this class.
+    */
+   private static final String CLASSNAME = CallConfig.class.getName();
+
+
+   //-------------------------------------------------------------------------
+   // Class functions
+   //-------------------------------------------------------------------------
+
+   //-------------------------------------------------------------------------
+   // Constructors
+   //-------------------------------------------------------------------------
+
+   /**
+    * Constructs a new <code>CallConfig</code> object. This constructor is
+    * only available to subclasses, since this class is <code>abstract</code>.
+    */
+   protected CallConfig() {
+
+      // TRACE: Enter constructor
+      Log.log_1000(CLASSNAME, null);
+
+      // empty
+
+      // TRACE: Leave constructor
+      Log.log_1002(CLASSNAME, null);
+   }
+
+
+   //-------------------------------------------------------------------------
+   // Fields
+   //-------------------------------------------------------------------------
+
+   //-------------------------------------------------------------------------
+   // Methods
+   //-------------------------------------------------------------------------
+}
